# Nous-Companion

./: .gitignore  CONTRIBUTING.md  DEVELOPER_BRIEF.md  LICENSE  NOTICE.md  README.md  SECURITY.md  requirements.txt  start_renderer_dev_server.bat  test_idle_load.py  test_scene_player_basic.py  test_scene_player_import.py  test_structural.py
demo-scenes/: demo-final-v3.nous-scene.json  variant-a-witness.nous-scene.json  variant-b-teammate.nous-scene.json  variant-c-invitation.nous-scene.json
docs/: 3-variant-script-architecture.md  creative-toolkit.md  deep-scope-plan.md  release-handoff.md  release-plan.md  scene-file-format.md  social-plan.md  submission-plan.md  tauri-lag-investigation.md
renderer/: arc-effect-test.html  config.json  font-preview.html  hover-test.html  index.html  settings.html  splash-preview.html
scenes/: demo-witness.nous-scene.json
scripts/: check_sprites.py  debug_composite.py  debug_lipsync.py  demo_server.py  detect_hallucinations.py  detect_offsets.py  gen_expressions.py  gen_placeholders.py  inspect_hermes.py  install.ps1  install.sh  launch-portable.bat  omnivoice_tts.py  preview_animation.py  qa_report.py  run_demo.py  run_nous_companion.py  sprite_sheet.py  test_audio_direct.py  test_compositor.py  test_imports.py  verify_scene.py
src/: hermes_runtime.py
src-tauri/: Cargo.toml  generate_icons.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: conftest.py  test_accumulator.py  test_compaction.py  test_compositor.py  test_concurrency_switch.py  (+7 more)
(+43 files in other folders)
