[package]
name = "nous-companion"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rfd = "0.15"

[profile.release]
strip = true
lto = true
codegen-units = 1
